// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders correctly when \`isSmall\` is true and \`activeChannelId\` is falsy 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-container-59 expanded MuiPaper-elevation8"
  >
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root makeStyles-container-61 MuiListItem-button"
      role="button"
      tabindex="0"
    >
      <div
        class="makeStyles-container-63"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-icon-64"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
          </svg>
        </div>
        <span
          class="makeStyles-dotContainer-65"
        >
          <span
            class="makeStyles-dot-66 makeStyles-dot_active-67 "
            title="Common:Active"
          />
        </span>
      </div>
      <div
        class="makeStyles-textContainer-62"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorInherit MuiTypography-noWrap"
          title=""
        />
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`Sidebar renders correctly when \`isSmall\` is true and \`activeChannelId\` is truthy 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-container-85 hidden MuiPaper-elevation8"
  >
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root makeStyles-container-87 MuiListItem-button"
      role="button"
      tabindex="0"
    >
      <div
        class="makeStyles-container-89"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-icon-90"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
          </svg>
        </div>
        <span
          class="makeStyles-dotContainer-91"
        >
          <span
            class="makeStyles-dot-92 makeStyles-dot_active-93 "
            title="Common:Active"
          />
        </span>
      </div>
      <div
        class="makeStyles-textContainer-88"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorInherit MuiTypography-noWrap"
          title=""
        />
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`Sidebar renders correctly when \`isUserEmailConfirmed\` is false 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-container-33  MuiPaper-elevation8"
  >
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root makeStyles-container-35 MuiListItem-button"
      role="button"
      tabindex="0"
    >
      <div
        class="makeStyles-container-37"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-icon-38"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
          </svg>
        </div>
        <span
          class="makeStyles-dotContainer-39"
        >
          <span
            class="makeStyles-dot-40 makeStyles-dot_active-41 "
            title="Common:Active"
          />
        </span>
      </div>
      <div
        class="makeStyles-textContainer-36"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorInherit MuiTypography-noWrap"
          title=""
        />
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`Sidebar renders correctly when \`isUserEmailConfirmed\` is true 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-container-1  MuiPaper-elevation8"
  >
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root makeStyles-container-3 MuiListItem-button"
      role="button"
      tabindex="0"
    >
      <div
        class="makeStyles-container-5"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-icon-6"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
          </svg>
        </div>
        <span
          class="makeStyles-dotContainer-7"
        >
          <span
            class="makeStyles-dot-8 makeStyles-dot_active-9 "
            title="Common:Active"
          />
        </span>
      </div>
      <div
        class="makeStyles-textContainer-4"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorInherit MuiTypography-noWrap"
          title=""
        />
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
    <div
      class="MuiFormControl-root MuiTextField-root makeStyles-textInput-20 MuiFormControl-marginDense MuiFormControl-fullWidth"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
        data-shrink="false"
        for="chat-sidebar-search"
        id="chat-sidebar-search-label"
      >
        Common:Search
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      >
        <input
          aria-invalid="false"
          autocomplete="search"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          id="chat-sidebar-search"
          name="search"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="PrivateNotchedOutline-legendLabelled-23"
          >
            <span>
              Common:Search
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="makeStyles-btnsContainer-2"
    >
      <button
        aria-label="Common:New Chat"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        title="Common:New Chat"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V7H4v3H1v2h3v3h2v-3h3v-2H6zm9 4c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Common:New Group"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        title="Common:New Group"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 10H5V7H3v3H0v2h3v3h2v-3h3v-2zm10 1c1.66 0 2.99-1.34 2.99-3S19.66 5 18 5c-.32 0-.63.05-.91.14.57.81.9 1.79.9 2.86s-.34 2.04-.9 2.86c.28.09.59.14.91.14zm-5 0c1.66 0 2.99-1.34 2.99-3S14.66 5 13 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm6.62 2.16c.83.73 1.38 1.66 1.38 2.84v2h3v-2c0-1.54-2.37-2.49-4.38-2.84zM13 13c-2 0-6 1-6 3v2h12v-2c0-2-4-3-6-3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <h6
      class="MuiTypography-root makeStyles-chatsText-25 MuiTypography-subtitle2"
    >
      Common:CHATS
    </h6>
    <ul
      class="MuiList-root MuiList-padding"
    />
  </div>
</div>
`;
